--- a/src/components/Dashboard.css
+++ b/src/components/Dashboard.css
@@ -1,7 +1,7 @@
 .dashboard {
-    display: flex;
+    /* display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content: center; */
     
     width: 50%;
     padding: 0;
